--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "rules": {
         "semi": [2, "always"],
         "no-multiple-empty-lines": "off",
-        "no-template-curly-in-string": "off"
+        "no-template-curly-in-string": "off",
+        "quotes": ["error", "double"]
     }
 }
